--- a/forbes.html
+++ b/forbes.html
@@ -8,6 +8,8 @@
     <title>Forbes Clone</title>
     <style>
         body {
+            margin: 0;
+        
             padding-left: 50px;
             padding-right: 50px;
         }
